--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
-  "name": "static.elclark.my.id",
-  "version": "1.0.0",
-  "description": "Elclark Static CDN",
-  "main": "dist/index.js",
-  "type": "module",
-  "scripts": {
-    "build": "tsc && node dist/index.js",
-    "dev": "tsc -w"
-  },
-  "keywords": [
-    "cdn",
-    "elclark",
-    "elclark-cdn"
-  ],
-  "author": "Elclark <mail@elclark.my.id>",
-  "license": "MIT",
-  "dependencies": {
-    "@types/marked": "^4.3.0",
-    "@types/node": "^20.1.3",
-    "gray-matter": "^4.0.3",
-    "marked": "^5.0.2",
-    "marked-mangle": "^1.0.1",
-    "typescript": "^5.0.4"
-  }
+	"name": "static.elclark.my.id",
+	"version": "1.0.0",
+	"description": "Elclark Static CDN",
+	"main": "dist/index.js",
+	"type": "module",
+	"scripts": {
+		"build": "tsc && node dist/index.js",
+		"format": "prettier --write .",
+		"dev": "tsc -w"
+	},
+	"keywords": [
+		"static",
+		"elclark"
+	],
+	"author": "Elclark <mail@elclark.my.id>",
+	"license": "MIT",
+	"dependencies": {
+		"@types/marked": "^4.3.0",
+		"@types/node": "^20.1.3",
+		"gray-matter": "^4.0.3",
+		"marked": "^5.0.2",
+		"marked-mangle": "^1.0.1",
+		"typescript": "^5.0.4"
+	},
+	"devDependencies": {
+		"prettier": "^2.8.8"
+	}
 }
