--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"scripts": {
 		"build": "tsc && node dist/index.js",
 		"format": "prettier --write .",
-		"dev": "tsc -w"
+		"dev": "tsx src/index.ts"
 	},
 	"keywords": [
 		"static",
@@ -21,6 +21,8 @@
 		"gray-matter": "^4.0.3",
 		"marked": "^5.0.2",
 		"marked-mangle": "^1.0.1",
+		"sharp": "^0.32.1",
+		"tsx": "^3.12.7",
 		"typescript": "^5.0.4"
 	},
 	"devDependencies": {
